--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,1 +1,32 @@
-<p>formulario works!</p>
+<h2>Formulário</h2>
+
+<div>
+  <label for="nome">Nome:</label>
+  <input type="text" id="nome" [(ngModel)]="nome" />
+</div>
+
+<div>
+  <label for="sobrenome">Sobrenome:</label>
+  <input type="text" id="sobrenome" [(ngModel)]="sobrenome" />
+</div>
+
+<div>
+  <label for="idade">Idade:</label>
+  <input type="number" id="idade" [(ngModel)]="idade" />
+</div>
+
+<div>
+  <label for="sexo">Sexo:</label>
+  <select id="sexo" [(ngModel)]="sexo">
+    <option value="N">Não informado</option>
+    <option value="M">Masculino</option>
+    <option value="F">Feminino</option>
+  </select>
+</div>
+
+<div>
+  <label for="dataNascimento">Data de Nascimento:</label>
+  <input type="date" id="dataNascimento" [(ngModel)]="dataNascimento" />
+</div>
+
+<button (click)="salvarDados()">Salvar Dados</button>
