--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,17 @@
-<div>
-    <h2>Tela de Login</h2>
-    <div *ngIf="loginError" class="error-message">
-      Dados de login inválidos. Por favor, tente novamente.
-    </div>
-    <div>
+<div class="login-container">
+  <h2 class="login-title">Tela de Login</h2>
+  <div *ngIf="loginError" class="error-message">
+    Dados de login inválidos. Por favor, tente novamente.
+  </div>
+  <div class="login-form">
+    <div class="form-group">
       <label for="username">Usuário:</label>
       <input type="text" id="username" [(ngModel)]="username" />
     </div>
-    <div>
+    <div class="form-group">
       <label for="password">Senha:</label>
       <input type="password" id="password" [(ngModel)]="password" />
     </div>
-    <button (click)="login()">Entrar</button>
+    <button class="button-enter" (click)="login()">Entrar</button>
   </div>
-  
+</div>
